[package]
name = "multiview-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
serde_json = { workspace = true }

[lints]
workspace = true
