[package]
name = "multiview-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
serde = { workspace = true }
# serde_json is used by the asyncapi module to build the AsyncAPI 3.0 document
# as a Value tree. Kept in regular deps (not dev-only) because the asyncapi
# module is part of the public library surface.
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"

[lints]
workspace = true
