[package]
name = "multiview-hal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# NVIDIA NVML live-load probe (ADR-0017). Runtime-loaded via `libloading`
# (no build-time native link), dual MIT OR Apache-2.0 (matches the project
# licence). OFF by default and pulled in ONLY by the `cuda` feature, so the
# default pure-Rust build never sees it and `cargo deny check`
# (`all-features = false`) does not scan it.
nvml-wrapper = { version = "0.12", optional = true }

[dev-dependencies]
proptest = "1.11.0"

[features]
"default" = []
"cuda" = ["dep:nvml-wrapper"]
"vaapi" = []
"qsv" = []
"videotoolbox" = []

[lints]
workspace = true
