[package]
name = "multiview-input"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches xtask). This lets cargo-deny's allow-wildcard-paths exempt the
# intra-workspace path deps while still denying real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
multiview-framestore = { workspace = true }
# Lock-free read-copy-update for the per-source caption cue store (same
# primitive the frame stores use); no native deps, keeps the crate `unsafe`-free.
arc-swap = "1.9.1"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# Real demux/decode lives entirely behind multiview-ffmpeg's SAFE wrappers; pulled
# in only when THIS crate's `ffmpeg` feature is enabled, so the default build
# stays pure-Rust / native-dep-free. multiview-input never links libav directly
# (it forbids `unsafe`); it only calls multiview-ffmpeg's safe API.
multiview-ffmpeg = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.11.0"
# Self-contained ffmpeg-feature tests generate their own tiny clip at runtime
# (via the `ffmpeg` CLI) into a tempdir — no checked-in media.
tempfile = "3"

[features]
"default" = []
# Enable real libav ingest. Pulls multiview-ffmpeg's `ffmpeg` feature; multiview-input
# itself adds NO native deps and stays `unsafe_code = forbid` — all FFI is owned
# by multiview-ffmpeg.
"ffmpeg" = ["dep:multiview-ffmpeg", "multiview-ffmpeg/ffmpeg"]
"ndi" = []
# SMPTE ST 2110 UDP/RTP receive transport. OFF by default: it needs a real
# ST 2110 network + PTP-disciplined NIC, so it is compile-verified only here.
# The PURE depacketizers (rtp/v20/v30/v40) and the ST 2022-7 reconstructor are
# always compiled and fully tested; this feature only adds the thin tokio
# `UdpSocket` binding in `st2110::transport`. No native deps, no FFI — the crate
# stays `unsafe_code = forbid`.
"st2110" = ["tokio/net"]
# WebRTC ingest transport. OFF by default: a real session needs an ICE/DTLS/SRTP
# media engine and a network stack, none of which exist in CI here, so the
# transport shell is compile-verified only. The PURE SDP offer/answer model
# (parse + negotiate) is always compiled and fully tested; this feature only adds
# the thin `webrtc::transport` shell. No native deps, no FFI — the crate stays
# `unsafe_code = forbid`. (The concrete media-engine binding is supplied by the
# application layer; this crate never links a WebRTC native library, keeping the
# default build pure-Rust and LGPL-clean.)
"webrtc" = []

[lints]
workspace = true
