[package]
name = "multiview-licence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
# Workspace-internal implementation crate; never published to crates.io
# (matches the rest of the workspace). This lets cargo-deny's
# allow-wildcard-paths exempt the intra-workspace path deps while still denying
# real "*" version wildcards.
publish = false

[dependencies]
multiview-core = { workspace = true }
multiview-events = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Exact lease arithmetic — never float. `chrono` here carries the workspace
# `default-features = false` (no `clock`/`std`-time reads): this crate computes
# the ladder over instants HANDED TO IT (the cli samples the wall clock), so the
# pure-data model never reads a system clock itself. `MIT OR Apache-2.0`,
# deny-clean, already in the workspace graph.
chrono = { workspace = true }
# Ed25519 lease/binding signature VERIFICATION against a pinned public key
# (ADR-0050 §2.5). `MIT OR Apache-2.0`; its closure (`curve25519-dalek`,
# `ed25519`, `signature`, `sha2`, `zeroize`, `subtle`) is `MIT`/`Apache-2.0`/
# `BSD-3-Clause`, all already on the deny.toml allowlist. The library uses ONLY
# the verification path (`VerifyingKey::verify_strict`) — no key generation, no
# RNG, no entropy source in non-test code (data minimisation: this crate never
# mints keys, it checks signatures handed to it). Default features are disabled
# and only `alloc` (for the `Signature`/key parsing surface) is enabled; the
# `rand_core` keygen feature is pulled in dev-dependencies for test keypairs only.
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1.11.0"
serde_json = { workspace = true }
# Test-only deterministic keypair generation for the Ed25519 verify tests
# (valid / tampered / wrong-key). `rand_core` enables `SigningKey::generate`;
# the non-test library never depends on an RNG.
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
rand_core = { version = "0.6", default-features = false }

[lints]
workspace = true
